Add search functionality with modal and button; update favicon and improve blog metadata

--- a/src/content/blog/25-11-17-00-00.md
+++ b/src/content/blog/25-11-17-00-00.md
@@ -10,7 +10,7 @@ draft: false
 
 广义上，任何能够引导电磁波沿特定方向传输的系统，如双导线、同轴线、波导等，都可称为传输线。其基本功能是传导电磁能量或构成各种微波元件。传输线理论的核心在于将描述空间电磁场的波动方程与边界条件问题，简化为沿传输线方向的一维电压、电流问题，即化“场”为“路”。
 
-#### 1. 传输线的基本方程与参数
+## 1. 传输线的基本方程与参数
 
 我们用四个单位长度的分布参数来描述传输线的电气特性：电阻 $R$ (Ω/m)、电感 $L$ (H/m)、电容 $C$ (F/m) 和电导 $G$ (S/m)。$R$ 和 $L$ 是串联参数，代表导线的损耗与储能；$C$ 和 $G$ 是并联参数，代表线间介质的储能与泄漏。
 
@@ -30,14 +30,14 @@ $$
 $$
 其中，$Z$ 是单位长度的串联阻抗，$Y$ 是单位长度的并联导纳。
 
-#### 2. 波动性、传播常数与特性阻抗
+## 2. 波动性、传播常数与特性阻抗
 
 求解上述方程可以得到波动方程，表明电压和电流在传输线上以波的形式存在。波的传播特性由两个关键参数描述：
 
 *   **传播常数 $\gamma$**：这是一个复数，定义为 $\gamma = \sqrt{ZY} = \alpha + j\beta$。其实部 $\alpha$ 是**衰减常数** (Np/m)，描述了波在传输过程中振幅的衰减；虚部 $\beta$ 是**相移常数** (rad/m)，描述了相位的变化，与波长关系为 $\beta = 2\pi/\lambda$。
 *   **特性阻抗 $Z_c$**：定义为 $Z_c = \sqrt{\frac{Z}{Y}} = \sqrt{\frac{R+j\omega L}{G+j\omega C}}$。它的物理意义是无限长传输线上电压波与电流波的振幅之比。$Z_c$ 是传输线自身的固有属性，由其材料和几何结构决定，与线路长度及终端负载无关。对于**无耗传输线**（$R=0, G=0$），特性阻抗为纯电阻，$Z_c = \sqrt{L/C}$，且与频率无关。
 
-#### 3. 入射波、反射波与反射系数
+## 3. 入射波、反射波与反射系数
 
 当传输线的终端连接一个负载阻抗 $Z_L$，且 $Z_L \neq Z_c$ 时，就会发生**阻抗失配**。此时，沿传输线传播的入射波到达负载后，一部分能量被负载吸收，另一部分能量则会反射回信源端，形成反射波。传输线上任意一点的总电压和总电流是入射波与反射波在该点叠加的结果。
 
@@ -47,7 +47,7 @@ $$
 $$
 反射系数的模 $|\Gamma|$ 取值范围为 $0 \le |\Gamma| \le 1$。当 $|\Gamma|=0$ 时，表示负载与传输线完全匹配（$Z_L=Z_c$），无反射；当 $|\Gamma|=1$ 时，表示全反射，例如负载为开路（$Z_L=\infty$）、短路（$Z_L=0$）或纯电抗。
 
-#### 4. 驻波与输入阻抗
+## 4. 驻波与输入阻抗
 
 入射波与反射波的干涉会在传输线上形成**驻波**。总电压（或电流）的振幅会随位置周期性变化，出现最大值点（波腹点）和最小值点（波节点）。
 
@@ -65,7 +65,7 @@ $$
     1.  **$\lambda/4$ 传输线**：当 $l = \lambda/4$ 时，$\tan(\beta l) \to \infty$，输入阻抗变为 $Z_{in} = \frac{Z_c^2}{Z_L}$，起到了阻抗变换的作用，称为四分之一波长阻抗变换器。
     2.  **$\lambda/2$ 传输线**：当 $l = \lambda/2$ 时，$\tan(\beta l) = 0$，输入阻抗变为 $Z_{in} = Z_L$，起到了阻抗重复的作用，常用于连接。
 
-#### 5. 阻抗匹配与史密斯圆图
+## 5. 阻抗匹配与史密斯圆图
 
 **阻抗匹配**是指通过外加网络，使得负载阻抗与传输线特性阻抗相等，或源内阻与传输线输入阻抗共轭匹配，目的是实现最大功率传输并消除反射。常见的匹配方法有 $\lambda/4$ 阻抗变换器和单支节（或双支节）匹配。
 
