--- a/src/content/blog/25-11-18-20-36.md
+++ b/src/content/blog/25-11-18-20-36.md
@@ -2,7 +2,7 @@
 title: '《微波技术》第二章“规则波导”'
 description: '《微波技术》第二章“规则波导” - 一篇关于技术的文章'
 pubDate: 2025-11-18
-tags: ['微波技术，学习笔记']
+tags: ['微波技', '学习笔记']
 draft: false
 ---
 
@@ -189,7 +189,7 @@ $$
 
 ### 6.2 基模 (Dominant Mode) 与单模传输
 
-*   **基模**: 在所有可能存在的模式中，**截止频率最低（截止波长最长）**的模式。
+*   **基模**: 在所有可能存在的模式中，截止频率最低（截止波长最长）的模式。
 *   对于 $a>b$ 的标准矩形波导，**TE10 模是基模**。其截止波长为：
     $$
     \lambda_{c, TE10} = 2a
