--- a/src/content/blog/25-11-18-21-19.md
+++ b/src/content/blog/25-11-18-21-19.md
@@ -2,7 +2,7 @@
 title: '《微波技术》第三章“微波谐振腔”'
 description: '《微波技术》第三章“微波谐振腔” - 一篇关于技术的文章'
 pubDate: 2025-11-18
-tags: ['微波技术，学习笔记']
+tags: ['微波技术', '学习笔记']
 draft: false
 ---
 
