Add admin management backend and enhance blog article handling; update frontmatter format and improve UI

--- a/src/content/blog/25-10-10-00-00.md
+++ b/src/content/blog/25-10-10-00-00.md
@@ -1,9 +1,9 @@
 ---
 title: '数学公式渲染测试'
 description: '测试博客系统中的数学公式渲染功能，包括行内公式和块级公式'
-pubDate: 'Nov 10 2025'
-heroImage: '../../assets/blog-placeholder-3.jpg'
+pubDate: '2025-10-10'
 tags: ['测试', '数学']
+draft: false
 ---
 
 本文档用于测试博客系统中的数学公式渲染功能。
