--- a/src/content/blog/25-11-20-13-18.md
+++ b/src/content/blog/25-11-20-13-18.md
@@ -1,7 +1,7 @@
 ---
 title: '黑格尔《精神现象学》梳理'
 description: '系统梳理《精神现象学》的主要环节和逻辑结构，从意识到绝对知识的辩证发展过程，适合快速复习和把握全书脉络'
-pubDate: 2025-11-20
+pubDate: '2025-11-20'
 tags: ['哲学', '黑格尔', '精神现象学', '德国古典哲学']
 draft: false
 ---
