--- a/src/content/blog/25-11-17-00-00.md
+++ b/src/content/blog/25-11-17-00-00.md
@@ -1,7 +1,7 @@
 ---
 title: '《微波技术》第一章“传输线理论”'
 description: '《微波技术》第一章“传输线理论” - 一篇关于技术的文章'
-pubDate: 2025-11-17
+pubDate: '2025-11-17'
 tags: ['微波技术', '学习笔记']
 draft: false
 ---
