--- a/src/content/blog/25-11-18-20-36.md
+++ b/src/content/blog/25-11-18-20-36.md
@@ -1,7 +1,7 @@
 ---
 title: '《微波技术》第二章“规则波导”'
 description: '《微波技术》第二章“规则波导” - 一篇关于技术的文章'
-pubDate: 2025-11-18
+pubDate: '2025-11-18'
 tags: ['微波技术', '学习笔记']
 draft: false
 ---
