Add blog pagination feature and improve blog directory management; enhance Mermaid rendering and update documentation

--- a/src/content/blog/25-11-22-14-30.md
+++ b/src/content/blog/25-11-22-14-30.md
@@ -105,7 +105,7 @@ draft: false
 
 老师可能会不耐烦："别问那么多，考试要考！"
 
-但小明的提问，就是**歇斯底里话语（Hysteric's Discourse）**的精髓。
+但小明的提问，就是歇斯底里话语（Hysteric's Discourse）的精髓。
 
 ### 游戏规则：
 - **主导者**：质疑者（不断追问的人）
