--- a/src/content/blog/25-11-22-00-00.md
+++ b/src/content/blog/25-11-22-00-00.md
@@ -1,12 +1,10 @@
 ---
 title: '模拟电子线路基础知识速查手册'
 description: '系统梳理模拟电子线路的核心知识点，包括 BJT、FET、MOSFET 的主要特点对比，以及基本放大电路的详细分析。适合速查速记和反复复习。'
-pubDate: 2025-11-22
+pubDate: '2025-11-22'
 tags: ['模拟电路', '电子工程', '半导体器件', '放大器设计', '速查手册']
 draft: false
 ---
-
-# 模拟电子线路基础知识速查手册
 
 > **适用场景**: 考试复习、工程设计参考、快速查询核心参数
 > **知识范围**: BJT、FET/MOSFET 特性 + 基本放大电路对比
