--- a/src/content/blog/25-01-20-00-00.md
+++ b/src/content/blog/25-01-20-00-00.md
@@ -1,11 +1,11 @@
 ---
 title: 'Astro 静态网站生成：现代 Web 开发的新选择'
 description: '深入探讨 Astro 框架的核心概念、性能优势以及最佳实践，了解为什么它成为静态网站生成的新趋势。'
-pubDate: 2025-01-20
-heroImage: '../../assets/blog-placeholder-2.jpg'
-tags: ['Astro', 'SSG', '性能优化', 'Web开发']
+pubDate: '2025-01-20'
+tags: ['Astro', 'SSG', '性能优化', 'Web开发', '开发日志']
 draft: false
 ---
+
 
 在现代 Web 开发领域，静态站点生成器（SSG）已经成为构建高性能网站的首选方案。而 Astro 作为新一代的 SSG
 框架，正在以其独特的理念改变着我们构建网站的方式。
