Optimize Mermaid rendering; implement lazy loading and rendering queue to improve performance and prevent blocking

--- a/src/content/blog/25-11-25-20-00.md
+++ b/src/content/blog/25-11-25-20-00.md
@@ -69,7 +69,7 @@ import { ViewTransitions } from 'astro:transitions';
 - ✅ 保持浏览器前进/后退功能
 - ✅ 自动处理脚本和状态管理
 
-###自定义过渡动画
+### 自定义过渡动画
 
 ```mermaid
 graph LR
@@ -101,7 +101,7 @@ sequenceDiagram
 
     U->>P: 点击导航链接
     P->>P: View Transitions 导航
-    Note over T: ❌ 主题脚本不重新执行
+    Note over T: 主题脚本不重新执行
     P->>U: 页面切换为浅色模式
 ```
 
@@ -256,13 +256,13 @@ sequenceDiagram
     participant C as Chart.js
 
     U->>P: 首次点击标签页
-    Note over W: ❌ 词云不显示
-    Note over C: ❌ 图表不显示
+    Note over W: 词云不显示
+    Note over C: 图表不显示
     U->>P: 刷新页面
     P->>W: 重新加载
     P->>C: 重新加载
-    Note over W: ✅ 词云显示
-    Note over C: ✅ 图表显示
+    Note over W: 词云显示
+    Note over C: 图表显示
 ```
 
 ### 问题根源
@@ -270,7 +270,7 @@ sequenceDiagram
 ```mermaid
 graph TD
     A[标签页初始化脚本] --> B{使用什么事件?}
-    B -->|window.load| C[❌ View Transitions 不触发]
+    B -->|window.load| C[View Transitions 不触发]
     B -->|DOMContentLoaded| C
 
     C --> D[导航时脚本不执行]
@@ -372,9 +372,9 @@ pie title 新增资源大小 (gzip压缩后)
 graph TB
     A[用户访问] --> B{访问类型?}
 
-    B -->|首次打开| C[🎬 首次加载层]
-    B -->|页面导航| D[🔄 页面切换层]
-    B -->|滚动阅读| E[📊 滚动反馈层]
+    B -->|首次打开| C[首次加载层]
+    B -->|页面导航| D[页面切换层]
+    B -->|滚动阅读| E[滚动反馈层]
 
     C --> F[400ms 淡入 + 8px 上移]
     D --> G[250ms 淡入淡出]
@@ -451,7 +451,7 @@ mindmap
 
 ---
 
-## 💭 总结与思考
+## 💭 总结与思考 
 
 通过这次优化，我们成功地为 Misaka Network 博客带来了接近单页应用的用户体验，同时保持了静态站点的性能优势。整个过程严格遵循"克制"原则，所有动画和交互都经过精心设计，确保不会打扰用户。
 
