Refactor code style across multiple files; unify spacing and formatting for improved readability and consistency

--- a/src/content/blog/25-11-21-14-00.md
+++ b/src/content/blog/25-11-21-14-00.md
@@ -32,6 +32,7 @@ $$
 $$
 
 其中：
+
 - $Q$（Query）：查询矩阵
 - $K$（Key）：键矩阵
 - $V$（Value）：值矩阵
@@ -85,6 +86,7 @@ $$
 模型学习预测序列中的下一个 token，通过这种方式学习语言的统计规律和世界知识。
 
 **训练数据来源：**
+
 - 互联网网页（Common Crawl）
 - 书籍语料库
 - 学术论文
@@ -300,7 +302,8 @@ const call = {
 
 ## 总结
 
-大语言模型代表了人工智能领域的重大突破，它们展现出了强大的语言理解和生成能力。从 Transformer 架构的创新，到大规模预训练和 RLHF 的应用，LLM 技术栈已经相当成熟。
+大语言模型代表了人工智能领域的重大突破，它们展现出了强大的语言理解和生成能力。从 Transformer 架构的创新，到大规模预训练和
+RLHF 的应用，LLM 技术栈已经相当成熟。
 
 **关键要点：**
 
@@ -315,6 +318,7 @@ const call = {
 ---
 
 *参考资料：*
+
 - Vaswani et al. (2017) "Attention Is All You Need"
 - Brown et al. (2020) "Language Models are Few-Shot Learners"
 - Ouyang et al. (2022) "Training language models to follow instructions with human feedback"
