--- a/src/content/blog/25-11-17-00-00.md
+++ b/src/content/blog/25-11-17-00-00.md
@@ -6,13 +6,16 @@ tags: ['微波技术', '学习笔记']
 draft: false
 ---
 
-在微波技术领域，我们处理的信号频率极高，其波长 $\lambda$ 与电路元件的物理尺寸 $l$ 相当（$l \approx \lambda$）。在这种情况下，传统的集总参数电路理论（$l \ll \lambda$）不再适用，我们必须引入**分布参数**的概念来分析问题。传输线理论正是研究电磁波在导行结构中传输与分布规律的核心理论。
+在微波技术领域，我们处理的信号频率极高，其波长 $\lambda$ 与电路元件的物理尺寸 $l$ 相当（$l \approx \lambda$
+）。在这种情况下，传统的集总参数电路理论（$l \ll \lambda$）不再适用，我们必须引入**分布参数**
+的概念来分析问题。传输线理论正是研究电磁波在导行结构中传输与分布规律的核心理论。
 
 广义上，任何能够引导电磁波沿特定方向传输的系统，如双导线、同轴线、波导等，都可称为传输线。其基本功能是传导电磁能量或构成各种微波元件。传输线理论的核心在于将描述空间电磁场的波动方程与边界条件问题，简化为沿传输线方向的一维电压、电流问题，即化“场”为“路”。
 
 ## 1. 传输线的基本方程与参数
 
-我们用四个单位长度的分布参数来描述传输线的电气特性：电阻 $R$ (Ω/m)、电感 $L$ (H/m)、电容 $C$ (F/m) 和电导 $G$ (S/m)。$R$ 和 $L$ 是串联参数，代表导线的损耗与储能；$C$ 和 $G$ 是并联参数，代表线间介质的储能与泄漏。
+我们用四个单位长度的分布参数来描述传输线的电气特性：电阻 $R$ (Ω/m)、电感 $L$ (H/m)、电容 $C$ (F/m) 和电导 $G$ (S/m)。$R$
+和 $L$ 是串联参数，代表导线的损耗与储能；$C$ 和 $G$ 是并联参数，代表线间介质的储能与泄漏。
 
 基于这些参数，可以建立描述传输线上任意一点的电压 $u(z,t)$ 和电流 $i(z,t)$ 瞬时关系的**电报方程**：
 $$
@@ -34,47 +37,65 @@ $$
 
 求解上述方程可以得到波动方程，表明电压和电流在传输线上以波的形式存在。波的传播特性由两个关键参数描述：
 
-*   **传播常数 $\gamma$**：这是一个复数，定义为 $\gamma = \sqrt{ZY} = \alpha + j\beta$。其实部 $\alpha$ 是**衰减常数** (Np/m)，描述了波在传输过程中振幅的衰减；虚部 $\beta$ 是**相移常数** (rad/m)，描述了相位的变化，与波长关系为 $\beta = 2\pi/\lambda$。
-*   **特性阻抗 $Z_c$**：定义为 $Z_c = \sqrt{\frac{Z}{Y}} = \sqrt{\frac{R+j\omega L}{G+j\omega C}}$。它的物理意义是无限长传输线上电压波与电流波的振幅之比。$Z_c$ 是传输线自身的固有属性，由其材料和几何结构决定，与线路长度及终端负载无关。对于**无耗传输线**（$R=0, G=0$），特性阻抗为纯电阻，$Z_c = \sqrt{L/C}$，且与频率无关。
+* **传播常数 $\gamma$**：这是一个复数，定义为 $\gamma = \sqrt{ZY} = \alpha + j\beta$。其实部 $\alpha$ 是**衰减常数** (Np/m)
+  ，描述了波在传输过程中振幅的衰减；虚部 $\beta$ 是**相移常数** (rad/m)
+  ，描述了相位的变化，与波长关系为 $\beta = 2\pi/\lambda$。
+* **特性阻抗 $Z_c$**：定义为 $Z_c = \sqrt{\frac{Z}{Y}} = \sqrt{\frac{R+j\omega L}{G+j\omega C}}$
+  。它的物理意义是无限长传输线上电压波与电流波的振幅之比。$Z_c$ 是传输线自身的固有属性，由其材料和几何结构决定，与线路长度及终端负载无关。对于
+  **无耗传输线**（$R=0, G=0$），特性阻抗为纯电阻，$Z_c = \sqrt{L/C}$，且与频率无关。
 
 ## 3. 入射波、反射波与反射系数
 
-当传输线的终端连接一个负载阻抗 $Z_L$，且 $Z_L \neq Z_c$ 时，就会发生**阻抗失配**。此时，沿传输线传播的入射波到达负载后，一部分能量被负载吸收，另一部分能量则会反射回信源端，形成反射波。传输线上任意一点的总电压和总电流是入射波与反射波在该点叠加的结果。
+当传输线的终端连接一个负载阻抗 $Z_L$，且 $Z_L \neq Z_c$ 时，就会发生**阻抗失配**
+。此时，沿传输线传播的入射波到达负载后，一部分能量被负载吸收，另一部分能量则会反射回信源端，形成反射波。传输线上任意一点的总电压和总电流是入射波与反射波在该点叠加的结果。
 
-为了定量描述反射的程度，我们引入**反射系数 $\Gamma$**。它被定义为反射波电压与入射波电压之比，是一个复数，既包含振幅信息也包含相位信息。在负载端（通常设为 $z=0$），负载反射系数为：
+为了定量描述反射的程度，我们引入**反射系数 $\Gamma$**
+。它被定义为反射波电压与入射波电压之比，是一个复数，既包含振幅信息也包含相位信息。在负载端（通常设为 $z=0$），负载反射系数为：
 $$
 \Gamma_L = \frac{U_r}{U_i} \bigg|_{z=0} = \frac{Z_L - Z_c}{Z_L + Z_c}
 $$
-反射系数的模 $|\Gamma|$ 取值范围为 $0 \le |\Gamma| \le 1$。当 $|\Gamma|=0$ 时，表示负载与传输线完全匹配（$Z_L=Z_c$），无反射；当 $|\Gamma|=1$ 时，表示全反射，例如负载为开路（$Z_L=\infty$）、短路（$Z_L=0$）或纯电抗。
+反射系数的模 $|\Gamma|$ 取值范围为 $0 \le |\Gamma| \le 1$。当 $|\Gamma|=0$ 时，表示负载与传输线完全匹配（$Z_L=Z_c$
+），无反射；当 $|\Gamma|=1$ 时，表示全反射，例如负载为开路（$Z_L=\infty$）、短路（$Z_L=0$）或纯电抗。
 
 ## 4. 驻波与输入阻抗
 
 入射波与反射波的干涉会在传输线上形成**驻波**。总电压（或电流）的振幅会随位置周期性变化，出现最大值点（波腹点）和最小值点（波节点）。
 
-*   **电压驻波比 (VSWR, 或 $\rho$)**：定义为线上电压最大值与最小值之比，$\rho = \frac{|U|_{max}}{|U|_{min}}$。它是衡量驻波强弱（即匹配程度）的重要指标。驻波比与反射系数模的关系为：
-    $$
-    \rho = \frac{1 + |\Gamma|}{1 - |\Gamma|}
-    $$
-    $\rho$ 的取值范围是 $1 \le \rho < \infty$。当 $\rho=1$ 时，表示完全匹配的行波状态；$\rho \to \infty$ 时，表示全反射的纯驻波状态。在实际应用中，通常要求 $\rho$ 尽可能接近1（如 $\rho \le 1.2$）。
+* **电压驻波比 (VSWR, 或 $\rho$)**：定义为线上电压最大值与最小值之比，$\rho = \frac{|U|_{max}}{|U|_{min}}$
+  。它是衡量驻波强弱（即匹配程度）的重要指标。驻波比与反射系数模的关系为：
+  $$
+  \rho = \frac{1 + |\Gamma|}{1 - |\Gamma|}
+  $$
+  $\rho$ 的取值范围是 $1 \le \rho < \infty$。当 $\rho=1$ 时，表示完全匹配的行波状态；$\rho \to \infty$
+  时，表示全反射的纯驻波状态。在实际应用中，通常要求 $\rho$ 尽可能接近1（如 $\rho \le 1.2$）。
 
-*   **输入阻抗 $Z_{in}$**：从传输线上任意一点朝负载方向看进去的总阻抗，定义为该点总电压与总电流之比。对于一段长度为 $l$ 的无耗传输线，其输入阻抗为：
-    $$
-    Z_{in}(l) = Z_c \frac{Z_L + jZ_c \tan(\beta l)}{Z_c + jZ_L \tan(\beta l)}
-    $$
-    此公式表明，输入阻抗不仅与负载 $Z_L$ 和传输线特性 $Z_c$ 有关，还与观察点到负载的距离 $l$ 呈周期性变化。其中有两个重要的特例：
-    1.  **$\lambda/4$ 传输线**：当 $l = \lambda/4$ 时，$\tan(\beta l) \to \infty$，输入阻抗变为 $Z_{in} = \frac{Z_c^2}{Z_L}$，起到了阻抗变换的作用，称为四分之一波长阻抗变换器。
-    2.  **$\lambda/2$ 传输线**：当 $l = \lambda/2$ 时，$\tan(\beta l) = 0$，输入阻抗变为 $Z_{in} = Z_L$，起到了阻抗重复的作用，常用于连接。
+* **输入阻抗 $Z_{in}$**：从传输线上任意一点朝负载方向看进去的总阻抗，定义为该点总电压与总电流之比。对于一段长度为 $l$
+  的无耗传输线，其输入阻抗为：
+  $$
+  Z_{in}(l) = Z_c \frac{Z_L + jZ_c \tan(\beta l)}{Z_c + jZ_L \tan(\beta l)}
+  $$
+  此公式表明，输入阻抗不仅与负载 $Z_L$ 和传输线特性 $Z_c$ 有关，还与观察点到负载的距离 $l$ 呈周期性变化。其中有两个重要的特例：
+  1. **$\lambda/4$ 传输线**：当 $l = \lambda/4$ 时，$\tan(\beta l) \to \infty$，输入阻抗变为 $Z_{in} = \frac{Z_c^2}{Z_L}$
+     ，起到了阻抗变换的作用，称为四分之一波长阻抗变换器。
+  2. **$\lambda/2$ 传输线**：当 $l = \lambda/2$ 时，$\tan(\beta l) = 0$，输入阻抗变为 $Z_{in} = Z_L$，起到了阻抗重复的作用，常用于连接。
 
 ## 5. 阻抗匹配与史密斯圆图
 
-**阻抗匹配**是指通过外加网络，使得负载阻抗与传输线特性阻抗相等，或源内阻与传输线输入阻抗共轭匹配，目的是实现最大功率传输并消除反射。常见的匹配方法有 $\lambda/4$ 阻抗变换器和单支节（或双支节）匹配。
+**阻抗匹配**
+是指通过外加网络，使得负载阻抗与传输线特性阻抗相等，或源内阻与传输线输入阻抗共轭匹配，目的是实现最大功率传输并消除反射。常见的匹配方法有 $\lambda/4$
+阻抗变换器和单支节（或双支节）匹配。
 
-**史密斯圆图 (Smith Chart)** 是解决传输线问题的强大图形工具。它将复反射系数平面 ($\Gamma$ 平面) 与归一化阻抗平面 ($\bar{Z} = Z/Z_c$) 巧妙地结合在一起。
+**史密斯圆图 (Smith Chart)** 是解决传输线问题的强大图形工具。它将复反射系数平面 ($\Gamma$ 平面)
+与归一化阻抗平面 ($\bar{Z} = Z/Z_c$) 巧妙地结合在一起。
 
-*   **基本构成**：圆图由两组正交的圆弧构成。一组是**等电阻圆**，另一组是**等电抗圆**。圆图的中心点代表匹配状态 ($\Gamma=0, \rho=1$)，最外层的大圆代表全反射状态 ($|\Gamma|=1$)。
-*   **核心应用**：
-    1.  **阻抗/导纳查找**：给定一个归一化负载阻抗 $\bar{Z}_L$，可以在圆图上唯一确定一个点，从而直接读出其对应的反射系数 $\Gamma_L$ (幅度和相角) 和驻波比 $\rho$。
-    2.  **阻抗变换**：从负载点出发，沿着**等驻波比圆**（即以圆心为中心，经过负载点的圆）旋转，就可以找到传输线上任意一点的输入阻抗。向信源方向移动对应顺时针旋转，向负载方向移动对应逆时针旋转。旋转的角度由圆图外围的波长刻度决定。
-    3.  **匹配设计**：利用史密斯圆图可以直观地进行单支节匹配等设计。例如，通过在等驻波比圆上旋转，找到与等电导圆($\bar{G}=1$)的交点，再利用并联的短路支节引入一个相反的电纳，即可实现匹配。
+* **基本构成**：圆图由两组正交的圆弧构成。一组是**等电阻圆**，另一组是**等电抗圆**
+  。圆图的中心点代表匹配状态 ($\Gamma=0, \rho=1$)，最外层的大圆代表全反射状态 ($|\Gamma|=1$)。
+* **核心应用**：
+  1. **阻抗/导纳查找**：给定一个归一化负载阻抗 $\bar{Z}_L$
+     ，可以在圆图上唯一确定一个点，从而直接读出其对应的反射系数 $\Gamma_L$ (幅度和相角) 和驻波比 $\rho$。
+  2. **阻抗变换**：从负载点出发，沿着**等驻波比圆**
+     （即以圆心为中心，经过负载点的圆）旋转，就可以找到传输线上任意一点的输入阻抗。向信源方向移动对应顺时针旋转，向负载方向移动对应逆时针旋转。旋转的角度由圆图外围的波长刻度决定。
+  3. **匹配设计**：利用史密斯圆图可以直观地进行单支节匹配等设计。例如，通过在等驻波比圆上旋转，找到与等电导圆($\bar{G}=1$)
+     的交点，再利用并联的短路支节引入一个相反的电纳，即可实现匹配。
 
 总之，传输线理论是连接电路理论与电磁场理论的桥梁。掌握电报方程、特性阻抗、反射系数、驻波比和输入阻抗等核心概念，并熟练运用史密斯圆图进行分析与计算，是学习微波技术的基础。
