--- a/src/content/blog/25-11-19-20-45.md
+++ b/src/content/blog/25-11-19-20-45.md
@@ -8,15 +8,19 @@ draft: false
 
 ## 前言
 
-在 AI 图像生成领域，ComfyUI 以其强大的节点式工作流系统脱颖而出，成为专业创作者和研究者的首选工具。与传统的一键式 WebUI 不同，ComfyUI 允许你像搭建乐高积木一样，通过连接不同的节点来精确控制整个图像生成流程。本文将从计算机视觉基础开始，系统性地介绍 ComfyUI 及其核心技术概念。
+在 AI 图像生成领域，ComfyUI 以其强大的节点式工作流系统脱颖而出，成为专业创作者和研究者的首选工具。与传统的一键式 WebUI
+不同，ComfyUI 允许你像搭建乐高积木一样，通过连接不同的节点来精确控制整个图像生成流程。本文将从计算机视觉基础开始，系统性地介绍
+ComfyUI 及其核心技术概念。
 
 ## 一、ComfyUI 简介
 
 ### 1.1 什么是 ComfyUI？
 
-ComfyUI 是一个基于 **节点图（Graph/Nodes）** 的 Stable Diffusion 用户界面，它将复杂的图像生成流程分解为可视化的节点单元。每个节点代表一个特定功能（如加载模型、编码文本、采样等），通过连线将节点组合，即可构建从简单到复杂的图像生成工作流。
+ComfyUI 是一个基于 **节点图（Graph/Nodes）** 的 Stable Diffusion
+用户界面，它将复杂的图像生成流程分解为可视化的节点单元。每个节点代表一个特定功能（如加载模型、编码文本、采样等），通过连线将节点组合，即可构建从简单到复杂的图像生成工作流。
 
 **核心优势：**
+
 - **模块化设计**：每个步骤都是独立节点，易于理解和调试
 - **高度灵活**：支持构建任意复杂的自定义工作流
 - **内存优化**：即使在低显存设备上也能运行（支持 CPU 模式）
@@ -43,6 +47,7 @@ graph LR
 ```
 
 这种设计让你能够：
+
 - 在任意节点插入自定义处理逻辑
 - 重用中间结果（如潜在空间图像）
 - 精确控制每个组件的参数
@@ -82,6 +87,7 @@ I \in \mathbb{R}^{H \times W \times C}
 $$
 
 其中：
+
 - $H$（Height）：图像高度（像素）
 - $W$（Width）：图像宽度（像素）
 - $C$（Channels）：通道数，RGB 彩色图像为 3，灰度图像为 1
@@ -90,10 +96,10 @@ $$
 
 ### 2.3 传统 CV vs 深度学习 CV
 
-| 方法 | 特征提取 | 优点 | 缺点 |
-|------|---------|------|------|
-| **传统方法** | 手工设计（如 SIFT、HOG） | 可解释性强 | 特征工程复杂，泛化能力弱 |
-| **深度学习** | 卷积神经网络（CNN）自动学习 | 端到端训练，性能优越 | 需要大量数据，黑盒性质 |
+| 方法       | 特征提取             | 优点         | 缺点           |
+|----------|------------------|------------|--------------|
+| **传统方法** | 手工设计（如 SIFT、HOG） | 可解释性强      | 特征工程复杂，泛化能力弱 |
+| **深度学习** | 卷积神经网络（CNN）自动学习  | 端到端训练，性能优越 | 需要大量数据，黑盒性质  |
 
 Stable Diffusion 属于深度学习范畴，其核心是 **扩散模型（Diffusion Model）**。
 
@@ -116,6 +122,7 @@ $$
 训练一个神经网络 $\epsilon_\theta$，学习如何从噪声 $x_t$ 预测并去除噪声，逐步恢复为清晰图像 $x_0$。
 
 **关键优势：**
+
 - 生成质量高于 GAN（生成对抗网络）
 - 训练稳定，不存在模式崩溃问题
 - 支持条件生成（通过文本、图像等条件引导）
@@ -133,6 +140,7 @@ $$
 3. **CLIP Text Encoder**：文本编码器（下文详述）
 
 **文件大小：**
+
 - SD 1.5 模型：约 2-4 GB
 - SDXL 模型：约 6-7 GB
 
@@ -143,6 +151,7 @@ $$
 **原理：** VAE 是一种压缩技术，将高维像素空间的图像压缩到低维潜在空间（Latent Space），大幅降低计算成本。
 
 **结构：**
+
 ```
 编码器（Encoder）: 像素图像 (512×512×3) → 潜在空间 (64×64×4)
 解码器（Decoder）: 潜在空间 (64×64×4) → 像素图像 (512×512×3)
@@ -161,11 +170,13 @@ $$
 $$
 
 **为什么需要 VAE？**
+
 - **降维：** 将 $512 \times 512 \times 3 = 786,432$ 维降至 $64 \times 64 \times 4 = 16,384$ 维（降低 48 倍）
 - **加速：** 扩散过程在潜在空间进行，速度提升数十倍
 - **语义保留：** 压缩后的 $z$ 保留了图像的关键语义信息
 
 **ComfyUI 中的使用：**
+
 - **VAE Encode**：将输入图像转为潜在空间（用于 Image-to-Image）
 - **VAE Decode**：将采样生成的潜在空间解码为最终图像
 
@@ -184,6 +195,7 @@ $$
 $$
 
 其中：
+
 - $77$：最大 token 数量（词元数）
 - $768$：CLIP ViT-L/14 的嵌入维度
 
@@ -197,6 +209,7 @@ $$
 其中 $Q$ 来自图像特征，$K, V$ 来自文本嵌入 $\mathbf{c}$。
 
 **ComfyUI 节点：**
+
 - **CLIP Text Encode (Positive)**：正向提示词，描述你想要的内容
 - **CLIP Text Encode (Negative)**：负向提示词，描述你不想要的内容（如 "blurry, low quality"）
 
@@ -211,20 +224,24 @@ W = W_0 + \Delta W = W_0 + BA
 $$
 
 其中：
+
 - $W_0 \in \mathbb{R}^{d \times k}$：原始权重（冻结）
 - $B \in \mathbb{R}^{d \times r}, A \in \mathbb{R}^{r \times k}$：低秩矩阵（$r \ll d, k$）
 
 **优势：**
+
 - **参数量小：** LoRA 文件通常仅 10-200 MB（相比完整模型的几 GB）
 - **可叠加：** 可以同时加载多个 LoRA，组合不同风格
 - **灵活切换：** 不修改原始模型，方便实验
 
 **作用：**
+
 - 学习特定风格（如水彩画、油画）
 - 学习特定人物、角色
 - 学习特定物体、场景
 
 **ComfyUI 节点：**
+
 - **Load LoRA**：加载 LoRA 权重，调整强度（0-1 之间）
 
 ### 3.5 Latent（潜在空间）
@@ -238,11 +255,13 @@ $$
 $$
 
 其中：
+
 - $B$：批次大小（Batch Size）
 - $4$：潜在空间通道数
 - $64 \times 64$：空间分辨率（原图的 1/8）
 
 **初始化方式：**
+
 1. **随机噪声**（Text-to-Image）：
    $$
    z_T \sim \mathcal{N}(0, I)
@@ -258,6 +277,7 @@ $$
    $$
 
 **ComfyUI 节点：**
+
 - **Empty Latent Image**：创建纯噪声潜在空间
 - **VAE Encode**：将图像编码为潜在空间
 - **Latent Upscale**：放大潜在空间分辨率
@@ -276,22 +296,22 @@ $$
 **关键参数：**
 
 1. **Steps（采样步数）：**
-   - 更多步数 → 更精细的结果，但速度更慢
-   - 典型值：20-30 步（DPM++ 系列），50-100 步（DDIM/Euler）
+  - 更多步数 → 更精细的结果，但速度更慢
+  - 典型值：20-30 步（DPM++ 系列），50-100 步（DDIM/Euler）
 
 2. **CFG Scale（分类器自由引导系数）：**
    $$
    \epsilon_{\text{pred}} = \epsilon_{\text{uncond}} + s \cdot (\epsilon_{\text{cond}} - \epsilon_{\text{uncond}})
    $$
 
-   - $s$：CFG Scale（典型值 7-12）
-   - 更高的 CFG → 更符合提示词，但可能过饱和
-   - 更低的 CFG → 更自然，但可能偏离提示词
+  - $s$：CFG Scale（典型值 7-12）
+  - 更高的 CFG → 更符合提示词，但可能过饱和
+  - 更低的 CFG → 更自然，但可能偏离提示词
 
 3. **Sampler（采样算法）：**
 
    | 采样器 | 特点 | 推荐步数 |
-   |--------|------|---------|
+      |--------|------|---------|
    | **Euler** | 简单快速，适合快速测试 | 30-40 |
    | **Euler a** | 带随机性，每次结果略有不同 | 20-30 |
    | **DPM++ 2M** | 高质量，收敛快 | 20-25 |
@@ -300,23 +320,24 @@ $$
 
 4. **Scheduler（调度器）：**
    控制每步的噪声水平衰减速度：
-   - **Karras**：推荐用于 DPM++ 系列，收敛更稳定
-   - **Normal**：标准调度
-   - **Exponential**：指数衰减
+  - **Karras**：推荐用于 DPM++ 系列，收敛更稳定
+  - **Normal**：标准调度
+  - **Exponential**：指数衰减
 
 5. **Seed（随机种子）：**
-   - 相同种子 + 相同参数 = 相同结果（确定性）
-   - 用于复现或微调特定图像
+  - 相同种子 + 相同参数 = 相同结果（确定性）
+  - 用于复现或微调特定图像
 
 6. **Denoise（去噪强度）：**
-   - `1.0`：完全去噪（Text-to-Image）
-   - `0.5-0.7`：部分去噪（Image-to-Image，保留原图结构）
+  - `1.0`：完全去噪（Text-to-Image）
+  - `0.5-0.7`：部分去噪（Image-to-Image，保留原图结构）
 
 ### 3.7 Text Embedding（文本嵌入）
 
 **定义：** Text Embedding 是 CLIP 编码器输出的向量表示，包含了提示词的语义信息。
 
 **Tokenization（分词）过程：**
+
 ```
 "a beautiful cat" → ["a", "beautiful", "cat"] → [49406, 1174, 2368, 2368, 49407, ...]
 ```
@@ -328,11 +349,13 @@ $$
 $$
 
 **训练自定义 Embedding：**
+
 - **Textual Inversion**：学习新的 token 嵌入（如特定人物、风格）
 - 文件格式：`.pt` 或 `.safetensors`（通常几 KB）
 - 用法：在提示词中插入 `<embedding:name>`
 
 **ComfyUI 使用：**
+
 - 在 CLIP Text Encode 节点的提示词中直接引用嵌入名称
 
 ### 3.8 Conditioning（条件）
@@ -340,14 +363,17 @@ $$
 **定义：** Conditioning 是指导扩散模型生成特定内容的控制信号，包括：
 
 **1. 文本条件（Text Conditioning）：**
+
 - **Positive Prompt**：正向引导（想要的内容）
 - **Negative Prompt**：负向引导（不想要的内容）
 
 **2. 图像条件（Image Conditioning）：**
+
 - **ControlNet**：基于边缘、深度、姿态等控制生成
 - **IP-Adapter**：基于参考图像的风格/内容
 
 **3. 其他条件：**
+
 - **Inpainting Mask**：指定需要重绘的区域
 - **Depth Map**：深度信息
 - **Canny Edge**：边缘检测结果
@@ -370,18 +396,19 @@ $$
 $$
 
 其中：
+
 - $\epsilon_\theta(x_t, \mathbf{c})$：条件预测（使用正向提示词）
 - $\epsilon_\theta(x_t, \emptyset)$：无条件预测（空提示词）
 - $s$：CFG Scale（引导强度）
 
 **效果对比：**
 
-| CFG Scale | 效果 |
-|-----------|------|
-| 1.0 | 无引导，接近无条件生成 |
-| 7.0 | 平衡，推荐默认值 |
-| 15.0 | 强引导，高度符合提示词但可能过饱和 |
-| 30.0+ | 极端引导，通常导致失真 |
+| CFG Scale | 效果                |
+|-----------|-------------------|
+| 1.0       | 无引导，接近无条件生成       |
+| 7.0       | 平衡，推荐默认值          |
+| 15.0      | 强引导，高度符合提示词但可能过饱和 |
+| 30.0+     | 极端引导，通常导致失真       |
 
 **实现细节：**
 训练时以一定概率（如 10%）将条件 $\mathbf{c}$ 替换为空，使模型学会无条件生成。
@@ -438,19 +465,23 @@ graph TB
 ### 4.2 关键阶段详解
 
 **阶段 1：文本处理**
+
 - CLIP 将自然语言转换为模型可理解的数值向量
 - 正负提示词分别编码，后续通过 CFG 结合
 
 **阶段 2：潜在空间生成**
+
 - 从标准正态分布采样初始噪声
 - 对于 Image-to-Image，先用 VAE 编码输入图像
 
 **阶段 3：迭代去噪（最耗时）**
+
 - UNet 网络预测当前噪声
 - 使用采样算法逐步去除噪声
 - 每步都受文本条件引导
 
 **阶段 4：图像解码**
+
 - VAE Decoder 将压缩表示还原为高分辨率图像
 - 后处理（如上采样、锐化）可选
 
@@ -486,6 +517,7 @@ graph LR
 ### 4.4 高级工作流示例
 
 **Image-to-Image（图生图）：**
+
 ```mermaid
 graph LR
     LoadImage["Load Image"] --> VAEEncode["VAE Encode"]
@@ -501,6 +533,7 @@ graph LR
 ```
 
 **ControlNet（精确控制姿态/结构）：**
+
 ```mermaid
 graph TB
     RefImage["Reference Image"] --> CannyDetector["Canny Edge Detector"]
@@ -515,6 +548,7 @@ graph TB
 ```
 
 **LoRA 堆叠（组合多种风格）：**
+
 ```mermaid
 graph LR
     Checkpoint["Load Checkpoint"] --> LoRA1["Load LoRA<br/>(style_1, 0.8)"]
@@ -541,29 +575,32 @@ graph LR
 ### 5.2 学习路径建议
 
 **入门阶段：**
+
 1. 搭建基础 Text-to-Image 工作流
 2. 理解每个节点的作用和参数
 3. 实验不同采样器和 CFG 值
 
 **进阶阶段：**
+
 1. 学习 LoRA 的使用和训练
 2. 探索 ControlNet、IP-Adapter 等高级控制
 3. 优化工作流性能（批处理、并行节点）
 
 **高级阶段：**
+
 1. 编写自定义节点（Python）
 2. 训练自定义模型和 Embedding
 3. 构建自动化生成流程（API 调用）
 
 ### 5.3 常见问题与解决方案
 
-| 问题 | 可能原因 | 解决方案 |
-|------|---------|---------|
-| 图像模糊 | VAE 质量差 | 更换为 `vae-ft-mse-840000` |
-| 颜色异常 | VAE 不匹配 | 使用模型配套的 VAE |
-| 显存不足 | 分辨率过高/批次过大 | 降低分辨率或启用 `--lowvram` |
-| 不符合提示词 | CFG 过低 | 提高 CFG Scale 到 7-12 |
-| 图像过饱和 | CFG 过高 | 降低 CFG Scale 或优化提示词 |
+| 问题     | 可能原因       | 解决方案                    |
+|--------|------------|-------------------------|
+| 图像模糊   | VAE 质量差    | 更换为 `vae-ft-mse-840000` |
+| 颜色异常   | VAE 不匹配    | 使用模型配套的 VAE             |
+| 显存不足   | 分辨率过高/批次过大 | 降低分辨率或启用 `--lowvram`    |
+| 不符合提示词 | CFG 过低     | 提高 CFG Scale 到 7-12     |
+| 图像过饱和  | CFG 过高     | 降低 CFG Scale 或优化提示词     |
 
 ### 5.4 资源推荐
 
@@ -579,6 +616,7 @@ graph LR
 
 ## 结语
 
-ComfyUI 将复杂的 AI 图像生成技术分解为直观的可视化流程,让创作者能够精确控制每个生成环节。通过理解 VAE、CLIP、LoRA、KSampler 等核心概念,你不仅能熟练使用现有工作流,更能根据需求设计创新的生成方案。
+ComfyUI 将复杂的 AI 图像生成技术分解为直观的可视化流程,让创作者能够精确控制每个生成环节。通过理解 VAE、CLIP、LoRA、KSampler
+等核心概念,你不仅能熟练使用现有工作流,更能根据需求设计创新的生成方案。
 
 希望本文能帮助你建立起对 ComfyUI 和 Stable Diffusion 技术栈的系统性认知。现在,打开 ComfyUI,开始你的 AI 艺术创作之旅吧！🎨✨
