--- a/src/content/blog/25-11-27-01-16.md
+++ b/src/content/blog/25-11-27-01-16.md
@@ -8,13 +8,14 @@ draft: false
 
 ### 名词解释
 
-*   **堆栈 (Stack)**：是一种在计算机内存中按特定规则操作的数据结构，遵循“后进先出”（LIFO, Last-In, First-Out）的原则。它是一块连续的内存区域，主要用于临时存储数据、函数参数、局部变量以及中断或子程序调用时的返回地址。
+* **堆栈 (Stack)**：是一种在计算机内存中按特定规则操作的数据结构，遵循“后进先出”（LIFO, Last-In,
+  First-Out）的原则。它是一块连续的内存区域，主要用于临时存储数据、函数参数、局部变量以及中断或子程序调用时的返回地址。
 
-*   **堆栈深度 (Stack Depth)**：指的是堆栈可以容纳的元素数量。这个值通常是以堆栈条目（字或双字）为单位，而非字节。程序运行时，实际使用的最大堆栈空间被称为最大深度。
+* **堆栈深度 (Stack Depth)**：指的是堆栈可以容纳的元素数量。这个值通常是以堆栈条目（字或双字）为单位，而非字节。程序运行时，实际使用的最大堆栈空间被称为最大深度。
 
-*   **栈顶 (Top of the Stack)**：是堆栈中允许进行数据插入（入栈）和删除（出栈）操作的一端。栈顶的位置是动态变化的，由一个专门的寄存器——堆栈指针（SP）来指示。在8086/8088架构中，栈顶通常是低地址。
+* **栈顶 (Top of the Stack)**：是堆栈中允许进行数据插入（入栈）和删除（出栈）操作的一端。栈顶的位置是动态变化的，由一个专门的寄存器——堆栈指针（SP）来指示。在8086/8088架构中，栈顶通常是低地址。
 
-*   **栈底 (Bottom of the Stack)**：与栈顶相对，是堆栈的另一端，位置是固定的。栈底是堆栈的起始位置，通常是高地址。第一个被压入堆栈的数据存放在栈底。
+* **栈底 (Bottom of the Stack)**：与栈顶相对，是堆栈的另一端，位置是固定的。栈底是堆栈的起始位置，通常是高地址。第一个被压入堆栈的数据存放在栈底。
 
 ### 如何实现堆栈指针初始化？
 
@@ -28,11 +29,11 @@ draft: false
 
 堆栈数据的读写与一般存储器数据的存取在操作方式、地址访问和管理机制上存在显著差异：
 
-| 特性         | 堆栈数据读写                                                 | 一般存储器数据存取                                           |
-| :----------- | :----------------------------------------------------------- | :----------------------------------------------------------- |
-| **操作原则** | 遵循严格的“后进先出”（LIFO）原则。数据的存取只能在栈顶进行，不能随机访问堆栈中间的元素。 | 可以按地址随机访问任意存储单元的数据，存取方式灵活。         |
-| **操作指令** | 通常使用专门的指令，如`PUSH`（入栈）和`POP`（出栈）。这些指令会自动修改堆栈指针SP的值。 | 使用通用的数据传送指令，如`MOV`，需要明确指定源地址和目标地址。 |
-| **地址管理** | 程序员无需关心具体的内存地址。堆栈指针SP会自动跟踪栈顶地址，实现地址的自动增减。 | 程序员需要显式地管理和指定要操作的数据的内存地址。           |
-| **管理方式** | 由编译器或操作系统自动管理，用于存放函数的参数值、局部变量等，调用结束后会自动释放。 | 通常由程序员通过`new`或`malloc`等方式手动分配和释放（堆内存），或者在编译时静态分配（静态区）。 |
-| **效率**     | 效率较高。因为有专门的硬件寄存器（SP）和指令支持，地址计算和管理开销小。 | 速度相对较慢，尤其是在堆中动态分配内存时，可能涉及复杂的内存管理算法，并可能产生内存碎片。 |
-| **存取单位** | 在8086/8088系统中，堆栈操作的基本单位是字（16位）。          | 可以是字节、字或双字等多种数据宽度。                         |
+| 特性       | 堆栈数据读写                                             | 一般存储器数据存取                                              |
+|:---------|:---------------------------------------------------|:-------------------------------------------------------|
+| **操作原则** | 遵循严格的“后进先出”（LIFO）原则。数据的存取只能在栈顶进行，不能随机访问堆栈中间的元素。    | 可以按地址随机访问任意存储单元的数据，存取方式灵活。                             |
+| **操作指令** | 通常使用专门的指令，如`PUSH`（入栈）和`POP`（出栈）。这些指令会自动修改堆栈指针SP的值。 | 使用通用的数据传送指令，如`MOV`，需要明确指定源地址和目标地址。                     |
+| **地址管理** | 程序员无需关心具体的内存地址。堆栈指针SP会自动跟踪栈顶地址，实现地址的自动增减。          | 程序员需要显式地管理和指定要操作的数据的内存地址。                              |
+| **管理方式** | 由编译器或操作系统自动管理，用于存放函数的参数值、局部变量等，调用结束后会自动释放。         | 通常由程序员通过`new`或`malloc`等方式手动分配和释放（堆内存），或者在编译时静态分配（静态区）。 |
+| **效率**   | 效率较高。因为有专门的硬件寄存器（SP）和指令支持，地址计算和管理开销小。              | 速度相对较慢，尤其是在堆中动态分配内存时，可能涉及复杂的内存管理算法，并可能产生内存碎片。          |
+| **存取单位** | 在8086/8088系统中，堆栈操作的基本单位是字（16位）。                    | 可以是字节、字或双字等多种数据宽度。                                     |
