--- a/src/content/blog/25-11-27-01-09.md
+++ b/src/content/blog/25-11-27-01-09.md
@@ -10,8 +10,7 @@ draft: false
 
 这组符号，就是著名的 **性化公式（Formulas of Sexuation）**。
 
-拉康引入数学并非为了故弄玄虚。他认为，语言具有欺骗性，而逻辑符号能直抵实在界（The Real）。为了证明那句震耳欲聋的断言——*
-*“性关系不存在”（Il n'y a pas de rapport sexuel）**——他必须在逻辑层面构建一个严密的证明。
+拉康引入数学并非为了故弄玄虚。他认为，语言具有欺骗性，而逻辑符号能直抵实在界（The Real）。为了证明那句震耳欲聋的断言——**“性关系不存在”（Il n'y a pas de rapport sexuel）**——他必须在逻辑层面构建一个严密的证明。
 
 今天，我们将拆解这些公式。我们将看到，“男人”和“女人”不是解剖学的分类，而是两个面对“阉割”函数时的不同逻辑解。
 
@@ -34,7 +33,7 @@ $$ \Phi x $$
 
 ### 第一部分：男性的逻辑空间——全集与例外
 
-黑板的左侧，拉康写下了两个公式，定义了什么是“男性结构”。这是一种基于**普遍性（Universality）**的逻辑。
+黑板的左侧，拉康写下了两个公式，定义了什么是“男性结构”。这是一种基于 **普遍性（Universality）** 的逻辑。
 
 #### 1. 原始父亲的例外
 
@@ -45,7 +44,7 @@ $$ \exists x . \overline{\Phi x} $$
 
 **解读：**
 这是男性的奠基性幻想。它意味着：“在这个世界上，**至少存在一个 x**，他不被阉割，他不受法律约束，他拥有绝对的、完整的享乐。”
-这就是弗洛伊德在《图腾与禁忌》中描述的**“原始父亲”**。在男性的潜意识深处，总觉得有一个例外（独裁者、神、或者想象中完美的自己），能够逃脱匮乏的诅咒。
+这就是弗洛伊德在《图腾与禁忌》中描述的 **“原始父亲”**。在男性的潜意识深处，总觉得有一个例外（独裁者、神、或者想象中完美的自己），能够逃脱匮乏的诅咒。
 
 #### 2. 普遍性的确立
 
@@ -65,7 +64,7 @@ $$ \forall x . \Phi x $$
 
 ### 第二部分：女性的逻辑空间——非全与无限
 
-黑板的右侧，情况变得极其诡异。这是一种基于**非全（Not-All / Pas-tout）**的逻辑。
+黑板的右侧，情况变得极其诡异。这是一种基于 **非全（Not-All / Pas-tout）** 的逻辑。
 
 #### 3. 没有例外
 
@@ -93,7 +92,7 @@ $$ \overline{\forall x} . \Phi x $$
 女性主体 **不构成一个封闭的集合**。你不能把所有女人装进一个袋子里说“这就是所有女人”。每一个女性都有一部分在菲勒斯功能之内（使用语言、逻辑），但她还有
 **另一部分** 溢出了这个边界。
 
-这就是拉康名言**“女人不存在”（La femme n'existe pas）**的数学表达——那个大写的、普遍的、封闭类别的“Woman”是不存在的。
+这就是拉康名言 **“女人不存在”（La femme n'existe pas）** 的数学表达——那个大写的、普遍的、封闭类别的“Woman”是不存在的。
 
 ---
 
@@ -122,17 +121,16 @@ a。
 
 **路径 A：指向菲勒斯**
 $$ \rightarrow \Phi $$
-女性主体的一部分指向了**$\Phi$（象征性的菲勒斯）**。在这个维度上，她参与世俗的游戏，她希望成为男人欲望的对象，她希望拥有权力或通过拥有男人来拥有菲勒斯。
+女性主体的一部分指向了 **$\Phi$（象征性的菲勒斯）**。在这个维度上，她参与世俗的游戏，她希望成为男人欲望的对象，她希望拥有权力或通过拥有男人来拥有菲勒斯。
 
 **路径 B：指向大他者的匮乏**
-$$ \rightarrow S(\cancel{A}) $$
-这是最关键的一条箭头。女性不仅指向菲勒斯，她还有一个箭头指向了**$S(\cancel{A})$（大他者的匮乏能指 / Signifier of the barred
+$$ \rightarrow S(\bar{A}) $$
+这是最关键的一条箭头。女性不仅指向菲勒斯，她还有一个箭头指向了 **$S(\bar{A})$（大他者的匮乏能指 / Signifier of the barred
 Other）**。
 
 **解读：**
 这意味着女性不仅在菲勒斯的逻辑中运作，她还通向了一个 **不可言说（Ineffable）**的领域。
-这里没有词语，没有定义，只有** 大他者的缺失**。正是在这个超越了语言边界的地方，女性体验到了一种男性无法理解的享乐——*
-*“另一种享乐”（Autre Jouissance / Other Jouissance）**。
+这里没有词语，没有定义，只有** 大他者的缺失**。正是在这个超越了语言边界的地方，女性体验到了一种男性无法理解的享乐——**“另一种享乐”（Autre Jouissance / Other Jouissance）**。
 
 这种享乐是弥散的、神性的、身体性的，就像圣特蕾莎的狂喜，她“感觉到了，但她说不出来”。
 
@@ -143,7 +141,7 @@ Other）**。
 现在，让我们把整张图拼起来。
 
 1. **男性的受阻：** 男性的箭头指向的是 $a$（幻想客体），而不是女人。他被困在自己的幻想循环里。
-2. **女性的溢出：** 女性的箭头虽然指向菲勒斯，但她还有一个箭头指向了 $S(\cancel{A})$（虚无/无限）。她总是比男人期待的要“多出一点”，或者“不在那里”。
+2. **女性的溢出：** 女性的箭头虽然指向菲勒斯，但她还有一个箭头指向了 $S(\bar{A})$（虚无/无限）。她总是比男人期待的要“多出一点”，或者“不在那里”。
 
 **逻辑上的断裂：**
 在这个图示中，**没有任何一个箭头是直接连接“男性主体”和“女性主体”的。**
@@ -161,7 +159,7 @@ Other）**。
 
 如果这就是全部，那么人类注定是孤独的。但正是在这绝望的数理逻辑之上，拉康谈论了 **爱**。
 
-正是因为**性关系（作为一种逻辑必然性）**是不存在的，**爱（作为一种偶然的相遇）**才变得如此重要。
+正是因为 **性关系（作为一种逻辑必然性）** 是不存在的，**爱（作为一种偶然的相遇）** 才变得如此重要。
 
 爱是什么？
 爱是当我们面对那个无法填补的鸿沟时，依然选择用言语（尽管它是匮乏的）去搭建一座桥梁。
