--- a/src/content/blog/25-11-27-21-29.md
+++ b/src/content/blog/25-11-27-21-29.md
@@ -22,8 +22,7 @@ draft: false
 
 小狗饿了想吃骨头,这是 **需求**(need)。需求是生理性的、直接的、可以被满足的。狗吃饱了,需求就消失了。
 
-但人不一样。当你在沙漠中濒临死亡,喝水成为唯一的生存焦点。一个月后你被救出,回到正常生活,生理上已经不再缺水,但你仍然会*
-*不停地想喝水**。这种挥之不去的冲动,已经超越了生理需求,变成了一种 **创伤性的执念**——这才是欲望。
+但人不一样。当你在沙漠中濒临死亡,喝水成为唯一的生存焦点。一个月后你被救出,回到正常生活,生理上已经不再缺水,但你仍然会 **不停地想喝水**。这种挥之不去的冲动,已经超越了生理需求,变成了一种 **创伤性的执念**——这才是欲望。
 
 ### 1.2 拉康的核心公式
 
@@ -110,15 +109,13 @@ $$
 
 想象一下这个场景:
 
-你有没有经历过 **转笔停不下来**?明知道这件事毫无意义,却控制不住地一直转。你从中获得一种说不清道不明的感觉——有点怪异,有点刺激,甚至有点
-**爽**。
+你有没有经历过 **转笔停不下来**?明知道这件事毫无意义,却控制不住地一直转。你从中获得一种说不清道不明的感觉——有点怪异,有点刺激,甚至有点 **爽**。
 
 这就是驱力的体现:一种 **强迫性的循环运动**,它不为了任何外在目的,只为了维持这个循环本身。
 
 再比如消费欲望:
 
-有人打开购物APP不停地搜索,搜了一晚上什么都没买,但他感到 **满足**。为什么?因为他享受的是 **搜索的过程**
-,而不是购买的结果。他要看琳琅满目的商品,被它们吸引、刺激,享受商品社会向他献殷勤的感觉。
+有人打开购物APP不停地搜索,搜了一晚上什么都没买,但他感到 **满足**。为什么?因为他享受的是 **搜索的过程**,而不是购买的结果。他要看琳琅满目的商品,被它们吸引、刺激,享受商品社会向他献殷勤的感觉。
 
 这个过程让他确认:**我的欲望依然旺盛,我可以继续想要更多**。这种确认本身就构成了快感。
 
@@ -165,9 +162,7 @@ graph LR
 
 拉康说,我曾经在听一首音乐时体验过这种快速循环的感觉:
 
-> "
-> 那种感觉很痛苦,但同时又很爽,有种释放感。这种痛苦是非常深刻的内在痛苦,不是身体上的生理疼痛,而是精神上的创伤,是极度的悲伤。而这个过程中的'爽'
-> ,就是一种快感。"
+> "那种感觉很痛苦,但同时又很爽,有种释放感。这种痛苦是非常深刻的内在痛苦,不是身体上的生理疼痛,而是精神上的创伤,是极度的悲伤。而这个过程中的'爽',就是一种快感。"
 
 ### 4.3 享乐的核心(Kernel of Enjoyment)
 
@@ -190,7 +185,7 @@ graph LR
 
 如果主体直接面对那个 **赤裸裸的、创伤性的享乐核心**,主体会承受不了,会崩溃。
 
-所以**幻想(fantasy)**就像一层保护膜,把那个过于激烈的快感包裹起来。
+所以 **幻想(fantasy)** 就像一层保护膜,把那个过于激烈的快感包裹起来。
 
 ### 5.2 幻想的结构
 
@@ -242,8 +237,7 @@ graph LR
 
 如果你有一个欲望,一种很强烈的爱欲,那你要 **一定要把它坚持到底**。
 
-注意:**这个"坚持"不是指追求满足**。欲望的本质就是追求它不被满足。你要坚持的,是那种 **永恒的、不妥协的姿态**,是那种*
-*作为剩余意义上的欲望**。
+注意:**这个"坚持"不是指追求满足**。欲望的本质就是追求它不被满足。你要坚持的,是那种 **永恒的、不妥协的姿态**,是那种 **作为剩余意义上的欲望**。
 
 ### 6.2 第二伦理原则:穿越幻想
 
@@ -257,7 +251,7 @@ graph LR
 
 比如,很多人说"我爱一个人,最后和他结婚了",然后就觉得圆满了、补足了、不再需要继续爱了。
 
-他们用 **婚姻这个想象性的共同体形式**,用婚后日常生活的琐碎,**压抑了原本的爱情冲动**。这个时候,他们其实已经**在欲望上妥协了
+他们用 **婚姻这个想象性的共同体形式**,用婚后日常生活的琐碎,**压抑了原本的爱情冲动**。这个时候,他们其实已经 **在欲望上妥协了
 **。
 
 在拉康看来,这是被某种意识形态幻想所俘获,是一种 **背叛**(betrayal)——背叛了爱的真实性,背叛了那个无法被符号化的实在界。
@@ -376,7 +370,6 @@ perversion),甚至是变态。
 理解拉康意义上的欲望,就是理解:
 
 > **我们永远都在追寻一个不存在的完整,永远都在填补一个无法填补的洞。**
->
 > **但正是这个洞,这个匮乏,这个永不满足——定义了我们作为人的尊严。**
 
 因为只有人,才能够在明知不可能的情况下,依然 **坚持欲望**,依然 **拒绝妥协**,依然 **勇敢地爱,勇敢地活**。
